first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels:
    type: web
spec:
  containers:
  - name: api-server
    image: sayedppqq/api-server
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
