storage-class-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pv-pod
spec:
  containers:
  - name: test-container
    image: nginx
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: test-volume
  volumes:
    - name: test-volume
      persistentVolumeClaim:
        claimName: my-claim
