ubuntu-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: web
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntu
  strategy: {}
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - image: sayedppqq/api-server
        imagePullPolicy: IfNotPresent
        name: api-server
        command: ["/bin/sleep", "3650d"]
        resources: {}
