ingress-postgre.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgre-ingress
  namespace: default
spec:
  rules:
  - host: pingress.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
